--- a/mat-label.html
+++ b/mat-label.html
@@ -7,11 +7,11 @@ The complete set of contributors may be found at https://expandjs.github.io/CONT
 -->
 
 <!--
-This component is used to display a material label.
+This element is used to display a material label.
 It extends the native html `label`.
 
-@component mat-label
-@description This component is used to display a material label.
+@element mat-label
+@description This element is used to display a material label.
 
 @dependency polymer Polymer/polymer#^0.5
 @dependency expandjs ExpandJS/expandjs
@@ -59,7 +59,7 @@ It extends the native html `label`.
     </template>
 
     <script>
-        XPComponent({
+        XPElement({
 
             // PUBLISH
             publish: {
