--- a/mat-label.html
+++ b/mat-label.html
@@ -12,6 +12,8 @@ It extends the native html `label`.
 
 @element mat-label
 @description This element is used to display a material label.
+@homepage http://www.expandjs.com/elements/mat-label
+@demo http://www.expandjs.com/demo/mat-label
 
 @dependency polymer Polymer/polymer#^0.5
 @dependency expandjs ExpandJS/expandjs
