--- a/mat-label.html
+++ b/mat-label.html
@@ -54,7 +54,7 @@ It extends the native html `label`.
             }
         </style>
         <label is="xp-label" id="matLabelAdaptee" focused="{{focused}}" for="{{for}}">
-            <mat-ink id="matLabelWrapper" color="{{focused ? 'light-blue-700a' : ''}}" disabled="{{disabled}}" opacity="secondary">
+            <mat-ink id="matLabelWrapper" color="{{focused ? 'light-blue-a700' : ''}}" disabled="{{disabled}}" opacity="secondary">
                 <content id="content"></content>
             </mat-ink>
         </label>
