--- a/mat-label.html
+++ b/mat-label.html
@@ -1,6 +1,6 @@
 <!--
 @license
-Copyright (c) 2015 The expand.js authors. All rights reserved.
+Copyright (c) 2015 The ExpandJS authors. All rights reserved.
 This code may only be used under the BSD style license found at https://expandjs.github.io/LICENSE.txt
 The complete set of authors may be found at https://expandjs.github.io/AUTHORS.txt
 The complete set of contributors may be found at https://expandjs.github.io/CONTRIBUTORS.txt
@@ -11,7 +11,7 @@ This element is used to display a material label.
 It extends the native html `label`.
 
 @element mat-label
-@description This element is used to display a material label.
+@description A custom element used to display a Material Design label
 @homepage http://www.expandjs.com/elements/mat-label
 @demo http://www.expandjs.com/demo/mat-label
 
