--- a/demo-element.html
+++ b/demo-element.html
@@ -19,7 +19,7 @@
         </style>
         <mat-demo label="mat-label">
 
-            <h1>Default</h1>
+            <div class="title">Default</div>
             <div class="container">
                 <mat-label for="username">Username</mat-label>
                 <mat-text-field id="username" format="lowerCase" deburr></mat-text-field>
