--- a/mat-label.html
+++ b/mat-label.html
@@ -12,6 +12,7 @@ It extends the native html `label`.
 
 @element mat-label
 @description A custom element used to display a Material Design label
+@group accessibility
 @homepage http://www.expandjs.com/elements/mat-label
 @demo http://www.expandjs.com/demo/mat-label
 
