--- a/mat-label.html
+++ b/mat-label.html
@@ -30,7 +30,7 @@ It extends the native html `label`.
 <link rel="import" href="../mat-ink/mat-ink.html">
 <link rel="import" href="../xp-label/xp-label.html">
 
-<polymer-element name="mat-label" constructor="MATLabelElement" attributes="disabled focused for">
+<polymer-element name="mat-label" attributes="disabled focused for">
 
     <template>
         <style>
