--- a/mat-label.html
+++ b/mat-label.html
@@ -13,8 +13,8 @@ It extends the native html `label`.
 @element mat-label
 @description A custom element used to display a Material Design label
 @group accessibility
-@homepage http://www.expandjs.com/elements/mat-label
-@demo http://www.expandjs.com/demo/mat-label
+@homepage http://expandjs.com/elements/mat-label
+@demo http://expandjs.com/demo/mat-label
 
 @dependency polymer Polymer/polymer#^0.5
 @dependency expandjs ExpandJS/expandjs
