--- a/mat-label.html
+++ b/mat-label.html
@@ -12,6 +12,7 @@ It extends the native html `label`.
 
 @element mat-label
 @description A custom element used to display a Material Design label
+@keywords material design, material label, web app, html5, expandjs
 @group accessibility
 @homepage http://expandjs.com/elements/mat-label
 @demo http://expandjs.com/demo/mat-label
