--- a/mat-label.html
+++ b/mat-label.html
@@ -65,6 +65,9 @@ It extends the native html `label`.
     <script>
         XPElement({
 
+            // ELEMENT
+            is: 'mat-label',
+
             // PUBLISH
             publish: {
 
