Updated dependencies and bug fixes

--- a/mat-label.html
+++ b/mat-label.html
@@ -17,6 +17,8 @@ It extends the native html `label`.
 @homepage http://expandjs.com/elements/mat-label
 @demo http://expandjs.com/demo/mat-label
 
+@wraps xp-label http://expandjs.com/elements/xp-label
+
 @dependency polymer Polymer/polymer#^1.0.0
 @dependency expandjs ExpandJS/expandjs#0.9.3
 @dependency mat-ink ExpandJS/mat-ink#0.9.3
