--- a/demo-element.html
+++ b/demo-element.html
@@ -6,17 +6,21 @@
 
     <template>
 
-        <mat-demo label="Default">
-            <script type="text/html">
+        <mat-demo name="mat-label" type="element" url="http://expandjs.com/elements/mat-label">
+
+            <mat-demo-panel label="Default">
+                <script type="text/html">
+                    <mat-label for="username">Email</mat-label>
+                    <mat-text-field id="username" type="email" inline></mat-text-field>
+                    <mat-label for="password">Password</mat-label>
+                    <mat-text-field id="password" type="password"></mat-text-field>
+                </script>
                 <mat-label for="username">Email</mat-label>
                 <mat-text-field id="username" type="email" inline></mat-text-field>
                 <mat-label for="password">Password</mat-label>
-                <mat-text-field id="password" type="password"></mat-text-field>
-            </script>
-            <mat-label for="username">Email</mat-label>
-            <mat-text-field id="username" type="email" inline></mat-text-field>
-            <mat-label for="password">Password</mat-label>
-            <mat-text-field id="password" type="password" inline></mat-text-field>
+                <mat-text-field id="password" type="password" inline></mat-text-field>
+            </mat-demo-panel>
+
         </mat-demo>
 
     </template>
