--- a/demo-element.html
+++ b/demo-element.html
@@ -13,7 +13,7 @@
                     <mat-label for="username">Email</mat-label>
                     <mat-text-field id="username" type="email" inline></mat-text-field>
                     <mat-label for="password">Password</mat-label>
-                    <mat-text-field id="password" type="password"></mat-text-field>
+                    <mat-text-field id="password" type="password" inline></mat-text-field>
                 </script>
                 <mat-label for="username">Email</mat-label>
                 <mat-text-field id="username" type="email" inline></mat-text-field>
