- Added mat-progress - Added mat-spinner - Improved xp-pressed-behavior - Major documentation improvements - Minor bug fixes - Moved multi selection from xp-selected-behavior to xp-multi-select-behavior

--- a/mat-label.html
+++ b/mat-label.html
@@ -32,6 +32,7 @@ It works either by explicitly specifying the `id` of an input...
 @keywords material design, material label, web app, html5, expandjs, web-components
 @group accessibility
 @homepage http://expandjs.com/elements/mat-label
+@repository https://github.com/ExpandJS/mat-label
 @demo http://expandjs.com/demo/mat-label
 
 @adapts xp-label /bower_components/xp-label/xp-label.html
